# doc_X_chat

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
doc_X_chat/: env_exmpl.txt  manage.py  pyproject.toml  requirements.txt
doc_X_chat/admin_console/: apps.py  urls.py  views.py
doc_X_chat/admin_console/templates/admin_console/: users_data.html
doc_X_chat/chat/: forms.py  models.py  urls.py  views.py
doc_X_chat/chat/templates/: base.html
doc_X_chat/chat_llm/: admin.py  apps.py  for_test.py  forms.py  models.py  signals.py  urls.py  views.py
doc_X_chat/chat_llm/migrations/: 0001_initial.py  0002_userdata_customprofile_chatmessage.py  0003_chatmessage_pdf_document.py
doc_X_chat/chat_llm/static/chat_llm/: style.css
doc_X_chat/chat_llm/templates/chat_llm/: base.html  chat_base.html  copy.html  for_simple.html  for_simple_2.html  index.html  екап.html
doc_X_chat/doc_X_chat/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
doc_X_chat/llm_ai/: admin.py  apps.py  forms.py  models.py  views.py
doc_X_chat/user/: forms.py  models.py  views.py
doc_X_chat/user/templates/user/: password_reset_confirm.html  password_reset_done.html  profile.html  signup.html
doc_X_chat/users/: forms.py  models.py  urls.py  views.py
doc_X_chat/users/migrations/: 0001_initial.py
doc_X_chat/users/templates/: password_reset_complete.html  user.html  user_upload_avatar.html
doc_X_chat/users/templates/users/: account_activation_done.html  account_activation_email.html  account_activation_invalid.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  signin.html  signup.html  user.html  user_plan_subscription.html  user_statistic.html  user_upload_avatar.html
