[tool.poetry]
name = "doc-x-chat"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_x_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
cloudinary = "^1.36.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
